--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 						</header>
 
 						<ul>
+							<li><strong>Xueling Lin</strong>, Lei Chen, Chaorui Zhang, “TENET: Joint Entity and Relation Linking with Coherence Relaxation”, to be appeared in SIGMOD 2021.</li>
+							<li>Hao Xin, <strong>Xueling Lin</strong>, Lei Chen, “CaSIE: Canonicalize and Informative Selection of the OpenIE system”, to be appeared in ICDE 2021.</li>
+							<li>Haoyang Li, <strong>Xueling Lin</strong>, Lei Chen, “Fine-grained Entity Typing via Label Noise Reduction and Data Augmentation”, to be appeared in DASFFA 2021.</li>
 							<li><strong>Xueling Lin</strong>, Haoyang Li, Hao Xin, Zijian Li, Lei Chen, "KBPearl: a Knowledge Base Population System Supported by Joint Entity and Relation Linking.", Proceedings of the VLDB Endowment 13.7 (2020), 1035-1049. <a href = 'http://www.vldb.org/pvldb/vol13/p1035-lin.pdf'>[Paper]</a>
 							</li>
 							<li>Zijian Li, Wenhao Zheng, <strong>Xueling Lin</strong>, Ziyuan Zhao, Zhe Wang, Yue Wang, Xun Jian, Lei Chen, Qiang Yan, Tiezheng Mao, "TransN: Heterogeneous Network Representation Learning by Translating Node Embeddings.", In 2020 IEEE 36th International Conference on Data Engineering (ICDE) (pp. 589-600). <a href = 'https://ieeexplore.ieee.org/abstract/document/9101372'>[Paper]</a>
