--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						</header>
 
 						<ul>
-							<li><strong>Xueling Lin</strong>, Lei Chen, Chaorui Zhang, “TENET: Joint Entity and Relation Linking with Coherence Relaxation”, to be appear in SIGMOD 2021.</li>
+							<li><strong>Xueling Lin</strong>, Lei Chen, Chaorui Zhang, “TENET: Joint Entity and Relation Linking with Coherence Relaxation”, to appear in SIGMOD 2021.</li>
 							<li>Hao Xin, <strong>Xueling Lin</strong>, Lei Chen, “CaSIE: Canonicalize and Informative Selection of the OpenIE system”, to appear in ICDE 2021.</li>
 							<li>Haoyang Li, <strong>Xueling Lin</strong>, Lei Chen, “Fine-grained Entity Typing via Label Noise Reduction and Data Augmentation”, to appear in DASFFA 2021.</li>
 							<li><strong>Xueling Lin</strong>, Haoyang Li, Hao Xin, Zijian Li, Lei Chen, "KBPearl: a Knowledge Base Population System Supported by Joint Entity and Relation Linking.", Proceedings of the VLDB Endowment 13.7 (2020), 1035-1049. <a href = 'http://www.vldb.org/pvldb/vol13/p1035-lin.pdf'>[Paper]</a>
