--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						</header>
 						<ul>
 							<!--<li>I love taking photos in my spare time. Welcome to visit my Instgram <a href="https://www.instagram.com/heathersherrylin/" class="icon fa-instagram"><span class="label">Instagram</span></a>. :)</li>-->
-							<li>I have been falling in love with painting since I was a young kid. Now I am learning to work with iPad and Apple Pencil for drawing. <a href="paintings.html">Here are some of my artworks.</a> :)</li>
+							<li><a href="paintings.html">My paintings.</a> :)</li>
 
 						</ul>
 
