--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						</h4>
 
 						<h4>Office: Room 3657, Academic Building, HKUST</br>
-						Email: xlinai [-at-] cse.ust.hk</br>
+						Email: xlinai [-at-] connect.ust.hk</br>
 						</h4>
 
 
