--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
 						</header>
 
 						<ul>
-							<li><strong>Xueling Lin</strong>, Lei Chen, Chaorui Zhang, “TENET: Joint Entity and Relation Linking with Coherence Relaxation”, to appear in SIGMOD 2021.</li>
-							<li>Hao Xin, <strong>Xueling Lin</strong>, Lei Chen, “CaSIE: Canonicalize and Informative Selection of the OpenIE system”, to appear in ICDE 2021.</li>
-							<li>Haoyang Li, <strong>Xueling Lin</strong>, Lei Chen, “Fine-grained Entity Typing via Label Noise Reduction and Data Augmentation”, to appear in DASFAA 2021.</li>
+							<li><strong>Xueling Lin</strong>, Lei Chen, Chaorui Zhang, “TENET: Joint Entity and Relation Linking with Coherence Relaxation”, SIGMOD 2021: 1142-1155.</li>
+							<li>Hao Xin, <strong>Xueling Lin</strong>, Lei Chen, “CaSIE: Canonicalize and Informative Selection of the OpenIE system”, ICDE 2021: 2009-2014.</li>
+							<li>Haoyang Li, <strong>Xueling Lin</strong>, Lei Chen, “Fine-grained Entity Typing via Label Noise Reduction and Data Augmentation”, DASFAA (1) 2021: 356-374.</li>
 							<li><strong>Xueling Lin</strong>, Haoyang Li, Hao Xin, Zijian Li, Lei Chen, "KBPearl: a Knowledge Base Population System Supported by Joint Entity and Relation Linking.", Proceedings of the VLDB Endowment 13.7 (2020), 1035-1049. <a href = 'http://www.vldb.org/pvldb/vol13/p1035-lin.pdf'>[Paper]</a>
 							</li>
-							<li>Zijian Li, Wenhao Zheng, <strong>Xueling Lin</strong>, Ziyuan Zhao, Zhe Wang, Yue Wang, Xun Jian, Lei Chen, Qiang Yan, Tiezheng Mao, "TransN: Heterogeneous Network Representation Learning by Translating Node Embeddings.", In 2020 IEEE 36th International Conference on Data Engineering (ICDE) (pp. 589-600). <a href = 'https://ieeexplore.ieee.org/abstract/document/9101372'>[Paper]</a>
+							<li>Zijian Li, Wenhao Zheng, <strong>Xueling Lin</strong>, Ziyuan Zhao, Zhe Wang, Yue Wang, Xun Jian, Lei Chen, Qiang Yan, Tiezheng Mao, "TransN: Heterogeneous Network Representation Learning by Translating Node Embeddings.", ICDE 2020: 589-600. <a href = 'https://ieeexplore.ieee.org/abstract/document/9101372'>[Paper]</a>
 							</li>
-							<li><strong>Xueling Lin</strong> and Lei Chen, "Canonicalization of Open Knowledge Bases with Side Information from Source Text.", In 2019 IEEE 35th International Conference on Data Engineering (ICDE) (pp. 950-961). <a href = 'https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8731346'>[Paper]</a><a href = 'ICDE2019_data.html'>[Dataset]</a>
+							<li><strong>Xueling Lin</strong> and Lei Chen, "Canonicalization of Open Knowledge Bases with Side Information from Source Text.", ICDE 2019: 950-961. <a href = 'https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8731346'>[Paper]</a><a href = 'ICDE2019_data.html'>[Dataset]</a>
 							</li>
 							<li><strong>Xueling Lin</strong> and Lei Chen, "Domain-Aware Multi-Truth Discovery from Conflicting Sources." Proceedings of the VLDB Endowment 11.5 (2018): 635-647.
 							<a href = 'http://www.vldb.org/pvldb/vol11/p635-lin.pdf'>[Paper]</a><a href = '#dataset1'>[Dataset]</a>
