fixed the links of the code and figures.

--- a/paintings.html
+++ b/paintings.html
@@ -65,12 +65,12 @@
 								<p>Feb 2020</p>
 							</article>
 
-
 							<article class="6u 12u$(3) work-item">
-								<a href="images/painting/4.jpg" class="image fit thumb"><img src="images/painting/4.jpg" height="400" alt="" /></a>
+								<a href="images/painting/mountains.jpeg" class="image fit thumb"><img src="images/painting/mountains.jpeg" height="400" alt="" /></a>
 								<h3>Mountains</h3>
 								<p>Jan 2018</p>
 							</article>
+							
 							<article class="6u 12u$(3) work-item">
 								<a href="images/painting/1.jpg" class="image fit thumb"><img src="images/painting/1.jpg" height="400" alt="" /></a>
 								<h3>Little Prince</h3>
