--- a/index.html
+++ b/index.html
@@ -66,22 +66,30 @@
 						</header>
 
 						<ul>
-							<li><strong>Xueling Lin</strong>, Lei Chen, Chaorui Zhang, “TENET: Joint Entity and Relation Linking with Coherence Relaxation”, SIGMOD 2021: 1142-1155. <a href = 'https://dl.acm.org/doi/abs/10.1145/3448016.3457280'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EaRjU_KFSOJCuHzCcygSL7IBxl8lqe4iISx93zlBzkCWvg?e=opdPIr'>[Code]</a> 
+							<li><strong>Xueling Lin</strong>, Lei Chen, Chaorui Zhang, “TENET: Joint Entity and Relation Linking with Coherence Relaxation”, SIGMOD 2021: 1142-1155. <a href = 'https://dl.acm.org/doi/abs/10.1145/3448016.3457280'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EaRjU_KFSOJCuHzCcygSL7IBxl8lqe4iISx93zlBzkCWvg?e=opdPIr'>[Code]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:t:/g/personal/xlinai_connect_ust_hk/ESExjk3FF8lChSJK9nRPY_sBJjX0nsxCB8EDrFoN1T3Ycw'>[README]</a>
 							</li>
+
 							<li>Hao Xin, <strong>Xueling Lin</strong>, Lei Chen, “CaSIE: Canonicalize and Informative Selection of the OpenIE system”, ICDE 2021: 2009-2014.</li>
+
 							<li>Haoyang Li, <strong>Xueling Lin</strong>, Lei Chen, “Fine-grained Entity Typing via Label Noise Reduction and Data Augmentation”, DASFAA (1) 2021: 356-374.</li>
-							<li><strong>Xueling Lin</strong>, Haoyang Li, Hao Xin, Zijian Li, Lei Chen, "KBPearl: a Knowledge Base Population System Supported by Joint Entity and Relation Linking.", Proceedings of the VLDB Endowment 13.7 (2020), 1035-1049. <a href = 'http://www.vldb.org/pvldb/vol13/p1035-lin.pdf'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EZ5PrENE9LxAjJoLRTkXASsBiFevfbdPUpHPqjJeMvzJzQ?e=MYmS6N'>[Code]</a> 
+
+							<li><strong>Xueling Lin</strong>, Haoyang Li, Hao Xin, Zijian Li, Lei Chen, "KBPearl: a Knowledge Base Population System Supported by Joint Entity and Relation Linking.", Proceedings of the VLDB Endowment 13.7 (2020), 1035-1049. <a href = 'http://www.vldb.org/pvldb/vol13/p1035-lin.pdf'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EZ5PrENE9LxAjJoLRTkXASsBiFevfbdPUpHPqjJeMvzJzQ?e=MYmS6N'>[Code]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:t:/g/personal/xlinai_connect_ust_hk/EV7j5kwUJn1DqCeILFaocIwBf9FYYcX946Qltha10u5Rzg?e=Hcl3N1'>[README]</a>
 							</li>
+
 							<li>Zijian Li, Wenhao Zheng, <strong>Xueling Lin</strong>, Ziyuan Zhao, Zhe Wang, Yue Wang, Xun Jian, Lei Chen, Qiang Yan, Tiezheng Mao, "TransN: Heterogeneous Network Representation Learning by Translating Node Embeddings.", ICDE 2020: 589-600. <a href = 'https://ieeexplore.ieee.org/abstract/document/9101372'>[Paper]</a>
 							</li>
-							<li><strong>Xueling Lin</strong> and Lei Chen, "Canonicalization of Open Knowledge Bases with Side Information from Source Text.", ICDE 2019: 950-961. <a href = 'https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8731346'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EdgENDne8MpNhbmOCDJF5GIBfzbSSDkD58y0bXpyeRqYGQ?e=X38Sez'>[Code]</a> <a href = 'ICDE2019_data.html'>[Dataset Description]</a> 
+
+							<li><strong>Xueling Lin</strong> and Lei Chen, "Canonicalization of Open Knowledge Bases with Side Information from Source Text.", ICDE 2019: 950-961. <a href = 'https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8731346'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EdgENDne8MpNhbmOCDJF5GIBfzbSSDkD58y0bXpyeRqYGQ?e=X38Sez'>[Code]</a> <a href = 'ICDE2019_data.html'>[Dataset Description]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:t:/g/personal/xlinai_connect_ust_hk/EdIw0iEd23NJh1BPrpwY6DYB2GFMeYkp7PuYK-YdasSfhg?e=W1RLm9'>[README]</a>
 							</li>
+
 							<li><strong>Xueling Lin</strong> and Lei Chen, "Domain-Aware Multi-Truth Discovery from Conflicting Sources." Proceedings of the VLDB Endowment 11.5 (2018): 635-647.
 							<a href = 'http://www.vldb.org/pvldb/vol11/p635-lin.pdf'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:f:/g/personal/xlinai_connect_ust_hk/EpcrSAv6AXBGmklsI3ze354BBHP9Q6r1cVKH2mw93CMARg?e=aPUT58'>[Dataset Dowload]</a> <a href = '#dataset1'>[Dataset Description]</a>
 							</li>
+
 							<li><strong>Xueling Lin</strong>, Jingjie Jiang, Calvin Hong Yi Li, Bo Li, Baochun Li. "Circa: collaborative code offloading among multiple mobile devices." Wireless Networks (2018): 1-19.
 							<a href = 'https://link.springer.com/article/10.1007/s11276-018-1824-y'>[Paper]</a>
 							</li>
+
 							<li><strong>Xueling Lin</strong>, Jingjie Jiang, Bo Li, Baochun Li, "Circa: Offloading Collaboratively in the Same Vicinity with iBeacons." Communications (ICC), 2015 IEEE International Conference on. IEEE, 2015.
 							<a href = 'https://ieeexplore.ieee.org/abstract/document/7248908/'>[Paper]</a>
 							</li>
@@ -131,7 +139,7 @@
 							<h3><strong>Datasets for Truth Discovery (VLDB 2018)</strong></h3>
 						</header>
 
-						<p>I have collected two datasets for my research in truth discorvery. The details of both datasets is listed as follows:</p>
+						<p>I have collected two datasets for my research in truth discorvery. You can download both datasets and the groundtruths <a href = 'https://hkustconnect-my.sharepoint.com/:f:/g/personal/xlinai_connect_ust_hk/EpcrSAv6AXBGmklsI3ze354BBHP9Q6r1cVKH2mw93CMARg?e=aPUT58'>via this link</a>. The details of both datasets is listed as follows:</p>
 						<ul>
 							<li>We collected the <b>book</b> dataset from AbeBooks.com in April 2017. It contains 54,591 different sources registered as booksellers and provides 2,338,559 listing information (i.e., bookstores selling books) for 210,206 books. Each source provides 0.000005% (1 book) to 28.7% (6,0317 books) of the whole collection.
 								This book dataset contains information of 18 different major categories of books, including crime fiction, children’s books, science fiction, horror stories, literature, arts, romance fiction, biographies, business, cookbooks, craft books, history, reference, religion, science, self-help, social science and travel books.
