fixed the links of figures.

--- a/paintings.html
+++ b/paintings.html
@@ -21,7 +21,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="#" class="image avatar"><img src="images/sherry4.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="images/sherry3.jpg" alt="" /></a>
 				<h1><strong>Xueling LIN (Sherry)</strong></h1>
 				<h1><strong>Ph.D Student</strong></h1>
 				<h1><strong>CSE, HKUST</strong></h1>
@@ -70,19 +70,19 @@
 								<h3>Mountains</h3>
 								<p>Jan 2018</p>
 							</article>
-							
+
 							<article class="6u 12u$(3) work-item">
-								<a href="images/painting/1.jpg" class="image fit thumb"><img src="images/painting/1.jpg" height="400" alt="" /></a>
+								<a href="images/painting/1.JPG" class="image fit thumb"><img src="images/painting/1.JPG" height="400" alt="" /></a>
 								<h3>Little Prince</h3>
 								<p>Apr 2016</p>
 							</article>
 							<article class="6u 12u$(3) work-item">
-								<a href="images/painting/5.jpg" class="image fit thumb"><img src="images/painting/5.jpg" height="400" alt="" /></a>
+								<a href="images/painting/5.JPG" class="image fit thumb"><img src="images/painting/5.JPG" height="400" alt="" /></a>
 								<h3>Coco</h3>
 								<p>Jan 2018</p>
 							</article>
 							<article class="6u 12u$(3) work-item">
-								<a href="images/painting/6.jpg" class="image fit thumb"><img src="images/painting/6.jpg" height="400" alt="" /></a>
+								<a href="images/painting/6.JPG" class="image fit thumb"><img src="images/painting/6.JPG" height="400" alt="" /></a>
 								<h3>Earth</h3>
 								<p>Dec 2017</p>
 							</article>
