removed duplicate links.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<li>Zijian Li, Wenhao Zheng, <strong>Xueling Lin</strong>, Ziyuan Zhao, Zhe Wang, Yue Wang, Xun Jian, Lei Chen, Qiang Yan, Tiezheng Mao, "TransN: Heterogeneous Network Representation Learning by Translating Node Embeddings.", ICDE 2020: 589-600. <a href = 'https://ieeexplore.ieee.org/abstract/document/9101372'>[Paper]</a>
 							</li>
 
-							<li><strong>Xueling Lin</strong> and Lei Chen, "Canonicalization of Open Knowledge Bases with Side Information from Source Text.", ICDE 2019: 950-961. <a href = 'https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8731346'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EdgENDne8MpNhbmOCDJF5GIBfzbSSDkD58y0bXpyeRqYGQ?e=X38Sez'>[Code]</a> <a href = 'ICDE2019_data.html'>[Dataset Description]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:t:/g/personal/xlinai_connect_ust_hk/EdIw0iEd23NJh1BPrpwY6DYB2GFMeYkp7PuYK-YdasSfhg?e=W1RLm9'>[README]</a>
+							<li><strong>Xueling Lin</strong> and Lei Chen, "Canonicalization of Open Knowledge Bases with Side Information from Source Text.", ICDE 2019: 950-961. <a href = 'https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8731346'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EdgENDne8MpNhbmOCDJF5GIBfzbSSDkD58y0bXpyeRqYGQ?e=X38Sez'>[Code]</a> <a href = 'ICDE2019_data.html'>[Dataset Description]</a>
 							</li>
 
 							<li><strong>Xueling Lin</strong> and Lei Chen, "Domain-Aware Multi-Truth Discovery from Conflicting Sources." Proceedings of the VLDB Endowment 11.5 (2018): 635-647.
