added two paper links.

--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 							<li><strong>Xueling Lin</strong>, Lei Chen, Chaorui Zhang, “TENET: Joint Entity and Relation Linking with Coherence Relaxation”, SIGMOD 2021: 1142-1155. <a href = 'https://dl.acm.org/doi/abs/10.1145/3448016.3457280'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EaRjU_KFSOJCuHzCcygSL7IBxl8lqe4iISx93zlBzkCWvg?e=opdPIr'>[Code]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:t:/g/personal/xlinai_connect_ust_hk/ESExjk3FF8lChSJK9nRPY_sBJjX0nsxCB8EDrFoN1T3Ycw'>[README]</a>
 							</li>
 
-							<li>Hao Xin, <strong>Xueling Lin</strong>, Lei Chen, “CaSIE: Canonicalize and Informative Selection of the OpenIE system”, ICDE 2021: 2009-2014.</li>
+							<li>Hao Xin, <strong>Xueling Lin</strong>, Lei Chen, “CaSIE: Canonicalize and Informative Selection of the OpenIE system”, ICDE 2021: 2009-2014. <a href = 'https://ieeexplore.ieee.org/document/9458825'>[Paper]</a>
+							</li>
 
-							<li>Haoyang Li, <strong>Xueling Lin</strong>, Lei Chen, “Fine-grained Entity Typing via Label Noise Reduction and Data Augmentation”, DASFAA (1) 2021: 356-374.</li>
+							<li>Haoyang Li, <strong>Xueling Lin</strong>, Lei Chen, “Fine-grained Entity Typing via Label Noise Reduction and Data Augmentation”, DASFAA (1) 2021: 356-374. <a href = 'https://link.springer.com/chapter/10.1007/978-3-030-73194-6_24'>[Paper]</a>
+							</li>
 
 							<li><strong>Xueling Lin</strong>, Haoyang Li, Hao Xin, Zijian Li, Lei Chen, "KBPearl: a Knowledge Base Population System Supported by Joint Entity and Relation Linking.", Proceedings of the VLDB Endowment 13.7 (2020), 1035-1049. <a href = 'http://www.vldb.org/pvldb/vol13/p1035-lin.pdf'>[Paper]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:u:/g/personal/xlinai_connect_ust_hk/EZ5PrENE9LxAjJoLRTkXASsBiFevfbdPUpHPqjJeMvzJzQ?e=MYmS6N'>[Code]</a> <a href = 'https://hkustconnect-my.sharepoint.com/:t:/g/personal/xlinai_connect_ust_hk/EV7j5kwUJn1DqCeILFaocIwBf9FYYcX946Qltha10u5Rzg?e=Hcl3N1'>[README]</a>
 							</li>
