--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 						Email: xlinai [-at-] connect.ust.hk</br>
 						</h4>
 
-
-						<p>I am currently a Ph.D student at <a href= 'https://www.cse.ust.hk'>Department of Computer Science and Engineering (CSE)</a> in <a href= 'https://www.ust.hk'>Hong Kong University of Science and Technology (HKUST)</a>,
-							advised by <a href= 'https://www.cse.ust.hk/~leichen'>Prof. Lei Chen</a> starting from January 2017.
-							Before my Ph.D journey, I obtained my MPhil degree in Computer Science and Engineering from HKUST, and received my Bachelor degree in Software Engineering from <a href= 'http://www.sysu.edu.cn/en/index.htm'>Sun Yat-sen University</a>.</p>
+						<p>Since September 2021, I worked as a Researcher in The AI Framework and Data Technology Lab in Hong Kong Research Center, Huawei.
+						<p>I received my Ph.D. degree from <a href= 'https://www.cse.ust.hk'>Department of Computer Science and Engineering (CSE)</a> in <a href= 'https://www.ust.hk'>Hong Kong University of Science and Technology (HKUST)</a>,
+							advised by <a href= 'https://www.cse.ust.hk/~leichen'>Prof. Lei Chen</a> in July 2021.
+							Before my Ph.D. journey, I obtained my M.Phil degree in Computer Science and Engineering from HKUST, and received my Bachelor degree in Software Engineering from <a href= 'http://www.sysu.edu.cn/en/index.htm'>Sun Yat-sen University</a>.</p>
 
 						<p>My current research interest includes knowledge base refinement, data fusion and truth discovery. You can find more about the reseach topics of my teams in our <a href ='http://www.cse.ust.hk/knowledgegraph/home.html'>knowledge base group</a> or my <a href="https://github.com/heathersherry/Knowledge-Graph-Tutorials-and-Papers"> GitHub <span class="icon fa-github"></span></a>.</p>
 
