--- a/index.html
+++ b/index.html
@@ -24,39 +24,32 @@
 			<header id="header">
 				<a href="index.html" class="image avatar"><img src="images/sherry3.jpg" alt="" /></a>
 				<h1><strong>Xueling LIN (Sherry)</strong></h1>
-				<h1><strong>Ph.D Student</strong></h1>
-				<h1><strong>CSE, HKUST</strong></h1>
+				<h1><strong>Researcher</strong></h1>
+				<h1><strong>Huawei</strong></h1>
 			</header>
 
 		<!-- Main -->
 			<div id="main">
 
-
-		
 				<!-- About me -->
 					<section id="aboutme">
 						<header class="major">
 							<h3><strong>Xueling LIN (林雪玲)</strong></h3>
 						</header>
-						<h4><a href= 'https://www.cse.ust.hk'>Department of Computer Science and Engineering</a>,</br>
-						<a href= 'https://www.ust.hk'>The Hong Kong University of Science and Technology</a>,</br>
-							Clear Water Bay, Kowloon, Hong Kong
+						<h4>AI Framework and Data Technology Lab,</br>
+						Hong Kong Research Center, Huawei</br>
 						</h4>
 
-						<h4>Office: Room 3657, Academic Building, HKUST</br>
 						Email: xlinai [-at-] connect.ust.hk</br>
 						</h4>
-
+					</section>
+				<!-- Experience -->
+					<section id="experience">
 						<p>Since September 2021, I worked as a Researcher in The AI Framework and Data Technology Lab in Hong Kong Research Center, Huawei.
 						<p>I received my Ph.D. degree from <a href= 'https://www.cse.ust.hk'>Department of Computer Science and Engineering (CSE)</a> in <a href= 'https://www.ust.hk'>Hong Kong University of Science and Technology (HKUST)</a>,
 							advised by <a href= 'https://www.cse.ust.hk/~leichen'>Prof. Lei Chen</a> in July 2021.
 							Before my Ph.D. journey, I obtained my M.Phil degree in Computer Science and Engineering from HKUST, and received my Bachelor degree in Software Engineering from <a href= 'http://www.sysu.edu.cn/en/index.htm'>Sun Yat-sen University</a>.</p>
-
 						<p>My current research interest includes knowledge base refinement, data fusion and truth discovery. You can find more about the reseach topics of my teams in our <a href ='http://www.cse.ust.hk/knowledgegraph/home.html'>knowledge base group</a> or my <a href="https://github.com/heathersherry/Knowledge-Graph-Tutorials-and-Papers"> GitHub <span class="icon fa-github"></span></a>.</p>
-
-
-
-
 					</section>
 
 				<!-- Publication -->
