--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 					</section>
 				<!-- Experience -->
 					<section id="experience">
-						<p>Since September 2021, I worked as a Researcher in The AI Framework and Data Technology Lab in Hong Kong Research Center, Huawei.
-						<p>I received my Ph.D. degree from <a href= 'https://www.cse.ust.hk'>Department of Computer Science and Engineering (CSE)</a> in <a href= 'https://www.ust.hk'>Hong Kong University of Science and Technology (HKUST)</a>,
-							advised by <a href= 'https://www.cse.ust.hk/~leichen'>Prof. Lei Chen</a> in July 2021.
-							Before my Ph.D. journey, I obtained my M.Phil degree in Computer Science and Engineering from HKUST, and received my Bachelor degree in Software Engineering from <a href= 'http://www.sysu.edu.cn/en/index.htm'>Sun Yat-sen University</a>.</p>
-						<p>My current research interest includes knowledge base refinement, data fusion and truth discovery. You can find more about the reseach topics of my teams in our <a href ='http://www.cse.ust.hk/knowledgegraph/home.html'>knowledge base group</a> or my <a href="https://github.com/heathersherry/Knowledge-Graph-Tutorials-and-Papers"> GitHub <span class="icon fa-github"></span></a>.</p>
+						<li>Since September 2021, I worked as a Researcher in The AI Framework and Data Technology Lab in Hong Kong Research Center, Huawei.</li>
+						<li>In July 2021, I received my Ph.D. degree from <a href= 'https://www.cse.ust.hk'>Department of Computer Science and Engineering (CSE)</a> in <a href= 'https://www.ust.hk'>Hong Kong University of Science and Technology (HKUST)</a>,
+						where I worked on knowledge base refinement, datafusion and truth discevery in our <a href ='http://www.cse.ust.hk/knowledgegraph/home.html'>Knowledge Graph Group</a>, advised by <a href= 'https://www.cse.ust.hk/~leichen'>Prof. Lei Chen</a>.</li>
+						<li>Before my Ph.D. journey, I obtained my M.Phil degree in Computer Science and Engineering from HKUST, and received my Bachelor degree in Software Engineering from <a href= 'http://www.sysu.edu.cn/en/index.htm'>Sun Yat-sen University</a>.</li>
+						<li>Please refer to my <a href="https://github.com/heathersherry/Knowledge-Graph-Tutorials-and-Papers"> GitHub repository<span class="icon fa-github"></span></a> for more details about my research topics.</li>
 					</section>
 
 				<!-- Publication -->
