--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="index.html" class="image avatar"><img src="images/sherry3.jpg" alt="" /></a>
-				<h1><strong>Xueling LIN (Sherry)</strong></h1>
+				<h1><strong>Xueling LIN (Sherry, 林雪玲)</strong></h1>
 				<h1><strong>Researcher</strong></h1>
 				<h1><strong>Huawei</strong></h1>
 			</header>
@@ -34,7 +34,7 @@
 				<!-- About me -->
 					<section id="aboutme">
 						<header class="major">
-							<h3><strong>Xueling LIN (林雪玲)</strong></h3>
+							<h3><strong>Xueling LIN</strong></h3>
 						</header>
 						<h4>AI Framework and Data Technology Lab,</br>
 						Hong Kong Research Center, Huawei</br>
